[gd_scene load_steps=3 format=3 uid="uid://bjbbmrwcd6a0c"]

[ext_resource type="Theme" uid="uid://5uq80ele5x1b" path="res://Assets/main_theme.tres" id="1_n1qkl"]
[ext_resource type="Script" uid="uid://dqjlgbj1dx66" path="res://Scripts/Menu/mod_menu.gd" id="2_jfeyi"]

[node name="ModMenu" type="PanelContainer"]
anchors_preset = -1
anchor_right = 0.49100003
anchor_bottom = 0.577
offset_right = 0.36798096
offset_bottom = 0.10397339
theme = ExtResource("1_n1qkl")
script = ExtResource("2_jfeyi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddMod" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "ADD_MOD"

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = -5
theme_override_constants/margin_top = -5
theme_override_constants/margin_right = -5
theme_override_constants/margin_bottom = -5

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = -5
theme_override_constants/margin_top = -5
theme_override_constants/margin_right = -5
theme_override_constants/margin_bottom = -5

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ModList" type="VBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -5

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
ok_button_text = "Select"
file_mode = 0
access = 2
filters = PackedStringArray("*.zip")
use_native_dialog = true
hidden_files_toggle_enabled = false
folder_creation_enabled = false
favorites_enabled = false
recent_list_enabled = false

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddMod" to="." method="_on_add_mod_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
